static/css/style.css
html {
    position: relative;
    min-height: 100%;
  }

body {
    height: 100%;
    margin-bottom: 60px;
    background-color: rgba(242, 242, 242, 1);
    font-family: 'Noto Sans', sans-serif;
  }

h1, h2{
  font-weight: 500;
  font-family: 'Noto Sans', sans-serif;
}

h3 {
  font-weight: 400;
  font-family: 'Noto Sans', sans-serif;
  text-align: center;
}

.navbar-brand {
  font-size: 200%;
}

.section-title {
  text-align: center;
  margin: 4% auto;
}

.banner {
  background-image: url('/static/images/thomas-tucker-2q3RH6grop4-unsplash (1).jpg');
  height: 40vh; 
  background-size: cover;
  background-repeat: no-repeat;
}

.searchbar {
  width: 80%;
  max-width: 50vh;
}

.search-btn {
  width: 100%;
  margin-top: 2%;
}

.ad-description {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.fa-info {
  background-image: url('/static/images/frankie-lu-mvSnr7qxzPM-unsplash.jpg');
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
}

.op-info {
  background-image: url('/static/images/manuel-t-UQEWkszc3mY-unsplash.jpg');
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
}

.ac-info {
  background-image: url('/static/images/lauren-wyckoff-SrWw838OBWQ-unsplash.jpg');
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
}

.default-info {
  background-image: url('/static/images/david-leveque-21-lfJcLMVw-unsplash.jpg');
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
}

.info-container {
  height: 90%;
  width: 80%;
  background-color: rgba(242, 242, 242, 1);
  border-radius: 2px;
}

.title-card {
  margin: 4% auto;
  height: auto;
  text-align: center;
}

.ad-img {
  max-width: 100%;
}

.info-card {
  margin: 4% auto;
  height: auto;
}

.description-card {
  margin: 4% auto;
  height: auto;
}

footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  line-height: 60px;
  background-color: #212529;
  text-align: center;
}

